# bankconv

./: .gitignore  Backend.cpp  Backend.hpp  CMakeLists.txt  EntryCheckingAccount.cpp  EntryCheckingAccount.hpp  EntryCreditCard.cpp  EntryCreditCard.hpp  EntryUtils.cpp  EntryUtils.hpp  ExtractEntriesCheckingAccountSparkasseEmsland.cpp  ExtractEntriesCheckingAccountSparkasseEmsland.hpp  ExtractEntriesCreditCardSparkasseEmsland.cpp  ExtractEntriesCreditCardSparkasseEmsland.hpp  ExtractEntriesCreditCardTfBank.cpp  ExtractEntriesCreditCardTfBank.hpp  ExtractUtils.cpp  ExtractUtils.hpp  Main.cpp  Main.qml  ressource.qrc
backup old python program/src/: setup.py
backup old python program/src/bankconv/: app.py  date.py
backup old python program/src/bankconv.egg-info/: PKG-INFO  SOURCES.txt
backup old python program/src/bankconv/account/: booking_entry.py
pdf_to_utf8/: how to make executable.txt  pdf_to_utf8.py  pdf_to_utf8.spec
src/bankconv/: app.py  credit_card_billing.py  credit_card_entry.py  date.py  pdf_parser.py
src/bankconv/credit_card/: booking_entry.py  bookings.py
